# online-cinema

./: .dockerignore  .env.example  README.md  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  requirements.txt
src/: celery_worker.py  config.py  database.py  dependencies.py  email.py  main.py  security.py
src/models/: __init__.py  cart.py  movie.py  order.py  payment.py  tokens.py  user.py
src/routes/: __init__.py  admin.py  admin_cart.py  admin_order.py  admin_payments.py  auth.py  cart.py  comments.py  moderator.py  movies.py  orders.py  payments.py  purchases.py  users.py  webhooks.py
src/schemas/: __init__.py  cart.py  movie.py  order.py  payment.py  user.py
src/services/: stripe.py
src/tests/: conftest.py  test_auth.py  test_ecommerce.py  test_integration.py  test_movies.py  test_utils.py
